# Who-Goes-There

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.arm  README.md  Rocket.toml  TODO  TODO.md  docker-compose.yml  entrypoint.sh  example.csv  manage.py  requirements.txt
.github/workflows/: buildpushamd64.yml  buildpusharmv7.yml  buildpushimage.yml
apps/core/: urls.py  views.py
apps/portals/: urls.py  views.py
apps/statistics/: serializers.py  statistics.py  urls.py  views.py
apps/students/: admin.py  models.py  serializers.py  urls.py  views.py
apps/students/migrations/: 0001_initial.py  0002_auto_20210813_2026.py  0003_student_is_banned.py
apps/visits/: admin.py  models.py  serializers.py  urls.py  views.py
apps/visits/migrations/: 0001_initial.py  0002_alter_visit_duration.py  0003_alter_visit_duration.py  0004_auto_20210815_1118.py  0005_visit_duration.py
frontend/: .prettierrc  frontend_plan.txt
frontend/wgt-frontend/: .env.example  README.md  package-lock.json  package.json  vue.config.js
frontend/wgt-frontend/public/: index.html
frontend/wgt-frontend/src/: App.vue  main.js
frontend/wgt-frontend/src/assets/: configuration.js  example_visits.js
frontend/wgt-frontend/src/components/: checkTemplate.vue  errorTemplate.vue
migrations/2022-01-31-022712_students/: down.sql  up.sql
src/: auth.rs  main.rs  model.rs  schema.rs  student.rs  util.rs
wgt_backend/: authentication.py  settings.py  urls.py  utils.py  wsgi.py
who_goes_there/: asgi.py  settings.py  urls.py  wsgi.py
(+18 files in other folders)
