[package]
name = "wgt_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"]}
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
chrono = {version = "0.4", features = ["serde"]}
regex = "1.5.4"
lazy_static = "1.4.0"
sentry = "0.26.0"
diesel_migrations = "1.4.0"
openssl = { version = "0.10.40", features = ["vendored"] }
openssl-probe = "0.1.5"
csv = "1.1"
